2007-01-05  Richard Dale  <rdale@foton.es>

	* Updated the project TODO list

2007-01-04  Richard Dale  <rdale@foton.es>

	* The SmokeMethod attribute constructor now takes three arguments,
	  for example:

		[SmokeMethod("eventFilter", "(QObject*, QEvent*)", "##")]
		public virtual bool EventFilter(QObject arg1, QEvent arg2) {
			return ProxyQObject().EventFilter(arg1,arg2);
		}

	* There are four properties to access the values of a SmokeMethod.
	  For example:

		SmokeMethod.Name => "eventFilter"
		SmokeMethod.ArgsSignature => "(QObject*, QEvent*)"
		SmokeMethod.MungedName => "eventFilter##"
		SmokeMethod.Signature => "eventFilter(QObject*, QEvent*)"

	* Virtual method callbacks are now working again
	* In SmokeInvocation.Invoke() destructors aren't called until a way of
	  coordinating C# GC with C++ Qt instance deletion has been implemented.
	* C# operator methods are always static, and so the SmokeMethod Attribute
	  must be for the method in the I<classname>Proxy interface, rather than
	  on the static method call implementation.
	* Added a SmokeClass Attribute to the interfaces used to create the 
	  transparent proxy for static method invocations.
	* The SmokeClass Attribute is now used for the name of the class to use
	  when looking up methods in the Smoke library
	* The default format of a string in mono is utf8, and so assume that when
	  converting to and from QStrings.

2007-01-03  Richard Dale  <rdale@foton.es>

	* Added qdbus/remotecontrolledcar example
	* The enums named 'Type' clash with the C# method of the same name,
	  instead of renaming them 'E_Type', use 'TypeOf' as it looks better.
	* Changed the SmokeMethod Attribute to include the 'munged method name'
	  as well as the C++ type signature of the method's arguments. This 
	  make it easier and faster to look up the method in the Smoke library
	  at runtime. The SmokeMethod attribute wasn't working with static
	  methods as it needed to be on the interface where the static method